objects/Other_Party__c.object
<CustomObject>
    <description>Represents a supplier(vendor).</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>LWR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG-Tensilica Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG-Tensilica Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG-Interface IP Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG-Interface IP Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Other Parties</relationshipLabel>
        <relationshipName>Other_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Other Parties</relationshipLabel>
        <relationshipName>Other_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <description>Full address of Other party</description>
        <formula>Address_1__c  &amp;  IF(Address_1__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp;  Address_2__c  &amp;  IF(Address_2__c  &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp;  City__c &amp;  IF(City__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp; State__r.Name &amp;  IF(State__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;)&amp;  ZIP__c &amp;  IF(ZIP__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp;  Country__r.Name</formula>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>State__c.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Other Parties</relationshipLabel>
        <relationshipName>Other_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Other Party</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IPG_Tensilica_Partners_and_Contractors</fullName>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>IPG-Tensilica Contractor,IPG-Tensilica Partner</value>
        </filters>
        <label>IPG - Tensilica Partners and Contractors</label>
    </listViews>
    <listViews>
        <fullName>Interface_IP_Partners_Contractors</fullName>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>IPG-Interface IP Contractor,IPG-Interface IP Partner</value>
        </filters>
        <label>Interface IP Partners &amp; Contractors</label>
    </listViews>
    <nameField>
        <label>Other Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>